--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "jsonwebtoken": "^9.0.3",
     "motion": "^12.23.25",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
